--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\vladi\AppData\Local\Temp\testng-eclipse-1977940086\testng-customsuite.xml</span>
+                    <span>C:\Users\vladi\AppData\Local\Temp\testng-eclipse--1225958123\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.GlobalTest" class="method navigator-link" hash-for-method="loginOld">loginOld</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.GlobalTest" class="method navigator-link" hash-for-method="printName">printName</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="test.FileUpload" class="method navigator-link" hash-for-method="fileUpload">fileUpload</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.GlobalTest</span>
+              <span class="class-name">test.FileUpload</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginOld">
-                  </a> <!-- loginOld -->
-                  <span class="method-name">loginOld</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="printName">
-                  </a> <!-- printName -->
-                  <span class="method-name">printName</span>
+                  <a name="fileUpload">
+                  </a> <!-- fileUpload -->
+                  <span class="method-name">fileUpload</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\vladi\AppData\Local\Temp\testng-eclipse-1977940086\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vladi\AppData\Local\Temp\testng-eclipse--1225958123\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.GlobalTest&quot;/&gt;
+      &lt;class name=&quot;test.FileUpload&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginOld')
-data.setCell(0, 2, 'test.GlobalTest')
-data.setCell(0, 3, 7620);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'printName')
-data.setCell(1, 2, 'test.GlobalTest')
-data.setCell(1, 3, 2);
+data.setCell(0, 1, 'fileUpload')
+data.setCell(0, 2, 'test.FileUpload')
+data.setCell(0, 3, 12887);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,23 +219,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.GlobalTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.FileUpload</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">initializedDriver</span>
+                <span class="method-name">initialized</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">loginOld</span>
-                <span class="method-start">7838 ms</span>
+                <span class="method-name">fileUpload</span>
+                <span class="method-start">5705 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">printName</span>
-                <span class="method-start">15464 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
+              <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">15468 ms</span>
-              </div> <!-- configuration-class after -->
+                <span class="method-start">18607 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
