--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9abfd2">  <td>20/05/21 15:08:44</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;GlobalTest.initializedDriver()[pri:0, instance:test.GlobalTest@79ad8b2f]">&gt;&gt;initializedDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@317071334</td>   <td></td> </tr>
-<tr bgcolor="9abfd2">  <td>20/05/21 15:08:51</td>   <td>7831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.loginOld()[pri:0, instance:test.GlobalTest@79ad8b2f]">loginOld</td> 
-  <td>main@317071334</td>   <td></td> </tr>
-<tr bgcolor="9abfd2">  <td>20/05/21 15:08:59</td>   <td>15457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.printName()[pri:0, instance:test.GlobalTest@79ad8b2f]">printName</td> 
-  <td>main@317071334</td>   <td></td> </tr>
-<tr bgcolor="9abfd2">  <td>20/05/21 15:08:59</td>   <td>15461</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GlobalTest.tearDown()[pri:0, instance:test.GlobalTest@79ad8b2f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@317071334</td>   <td></td> </tr>
+<tr bgcolor="9abfd2">  <td>20/05/26 18:24:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileUpload.fileUpload()[pri:0, instance:test.FileUpload@75f32542]">fileUpload</td> 
+  <td>main@524241174</td>   <td></td> </tr>
+<tr bgcolor="9abfd2">  <td>20/05/26 18:24:02</td>   <td>-5695</td> <td>&nbsp;</td><td title="&gt;&gt;FileUpload.initialized()[pri:0, instance:test.FileUpload@75f32542]">&gt;&gt;initialized</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@524241174</td>   <td></td> </tr>
+<tr bgcolor="9abfd2">  <td>20/05/26 18:24:20</td>   <td>12903</td> <td>&nbsp;</td><td title="&lt;&lt;FileUpload.tearDown()[pri:0, instance:test.FileUpload@75f32542]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@524241174</td>   <td></td> </tr>
 </table>
