--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9abfd2">  <td>20/04/08 10:04:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.loginOld()[pri:0, instance:test.GlobalTest@2cbb3d47]">loginOld</td> 
-  <td>main@1552978964</td>   <td></td> </tr>
-<tr bgcolor="9abfd2">  <td>20/04/08 10:04:31</td>   <td>8231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.printName()[pri:0, instance:test.GlobalTest@2cbb3d47]">printName</td> 
-  <td>main@1552978964</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>20/05/27 11:26:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;FileUpload.initialized()[pri:0, instance:test.FileUpload@12d4bf7e]">&gt;&gt;initialized</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="d475b4">  <td>20/05/27 11:26:21</td>   <td>5549</td> <td>&nbsp;</td><td title="&gt;&gt;GlobalTest.initializedDriver()[pri:0, instance:test.GlobalTest@4c1d9d4b]">&gt;&gt;initializedDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>20/05/27 11:26:28</td>   <td>12593</td> <td>&nbsp;</td><td title="&gt;&gt;windowPopUp.initialized()[pri:0, instance:test.windowPopUp@7b227d8d]">&gt;&gt;initialized</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>20/05/27 11:26:33</td>   <td>17709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FileUpload.fileUpload()[pri:0, instance:test.FileUpload@12d4bf7e]">fileUpload</td> 
+  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>20/05/27 11:26:46</td>   <td>31254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="windowPopUp.getPopUpWindow()[pri:0, instance:test.windowPopUp@7b227d8d]">getPopUpWindow</td> 
+  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="d475b4">  <td>20/05/27 11:26:48</td>   <td>32539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.loginOld()[pri:0, instance:test.GlobalTest@4c1d9d4b]">loginOld</td> 
+  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="d475b4">  <td>20/05/27 11:26:55</td>   <td>39938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GlobalTest.printName()[pri:0, instance:test.GlobalTest@4c1d9d4b]">printName</td> 
+  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="c1c070">  <td>20/05/27 11:26:55</td>   <td>39943</td> <td>&nbsp;</td><td title="&lt;&lt;FileUpload.tearDown()[pri:0, instance:test.FileUpload@12d4bf7e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="d475b4">  <td>20/05/27 11:26:56</td>   <td>40689</td> <td>&nbsp;</td><td title="&lt;&lt;GlobalTest.tearDown()[pri:0, instance:test.GlobalTest@4c1d9d4b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>20/05/27 11:26:57</td>   <td>41360</td> <td>&nbsp;</td><td title="&lt;&lt;windowPopUp.tearDown()[pri:0, instance:test.windowPopUp@7b227d8d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1008925772</td>   <td></td> </tr>
 </table>
